# galton_sim

./: Cargo.toml  README.md
src/: board.rs  calibration.rs  core.rs  io.rs  main.rs  phase.rs
src/core/: environment.rs  shapes.rs  simulation.rs  tree.rs
src/io/: config.rs  environment.rs  output.rs  state.rs
