[package]
name = "galton_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.2"
crossbeam-utils = "0.8.16"
glam = "0.24.2"
json = "0.12.4"
priority-queue = "1.3.2"
rand = "0.8.5"
rustc-hash = "1.1.0"
png = "0.17.13"
colorgrad = "0.6.2"
image = "0.25.0"

[profile.release]
opt-level = 3
debug = true